--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "fs": "^0.0.1-security",
     "lightweight-charts": "^4.2.2",
     "lucide-react": "^0.469.0",
+    "moment": "^2.30.1",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
