--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@alpacahq/alpaca-trade-api": "^3.1.2",
     "@clerk/nextjs": "^6.9.15",
     "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
