--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 VANTAGE_API_KEY=W15RY1SCTLJDIB1L
 POLYGON_API_KEY=jCQvtKFC39SWJprdqxyiXFpac9UHB9K1
+
+# polygon_client = RESTClient(api_key="jCQvtKFC39SWJprdqxyiXFpac9UHB9K1")
+# fred = fredapi.Fred(api_key="6181a0492af2b26faf1da2bba74bd126")
+# newsapi = NewsApiClient(api_key="a9197c465fcd48898b38ee4d46e34dd2")
