--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,12 +33,16 @@
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.16.1",
     "fs": "^0.0.1-security",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "lightweight-charts": "^4.2.2",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "next": "15.1.4",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -51,7 +55,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
